objects/dbu_InventoryCheck_Result__c.object
<CustomObject>
    <fields>
        <fullName>API_response__c</fullName>
        <label>API response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>dbu_InventoryCheck_Result</relationshipLabel>
        <relationshipName>dbu_InventoryCheck_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>dbu_InventoryCheck_Result</relationshipLabel>
        <relationshipName>dbu_InventoryCheck_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Interval__c</fullName>
        <formula>(Now()-  CreatedDate )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time_Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>dbu_InventoryCheck_Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Cart__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Time_Interval__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>dbu_InventoryCheck_Result	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu_InventoryCheck_Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>